v1.3.49 Set tooltip span to white-space: pre-wrap Fix problem with integer length coming out wrong in some versions of MySql databases.

--- a/contentFiles/CodeFirstWebFramework/default.css
+++ b/contentFiles/CodeFirstWebFramework/default.css
@@ -81,6 +81,7 @@ table.form #tooltip {
     -webkit-border-radius: 5px;
     border-radius: 5px;
     z-index: 1;
+    white-space: pre-wrap;
 }
 @media screen and (min-width:700px) and (min-height:400px) {
     #spacer {
